objenises no workie